modal.css
@keyframes modalIn{
			to {opacity: 1;}
		}

		@keyframes modalOut{
			from {opacity: 1;}
			to {opacity: 0;}
		}

		#modal {
			display: none;
			background-color: rgba(0, 0, 0, .6);
			height: 100%;
			width: 100%;
			left: 0;
			top: 0;
			position: fixed;
			opacity: 0;
			animation-fill-mode: forwards;
		}

		#commands {
			position: absolute;
			right: 0px;
		}

		#lightbox {
			position: absolute;
			text-align: center;
			left: 50%;
			top: 50%;
			transform: translate(-50%, -50%);
			background-color: white;
			padding: 1%;
			border-radius: 10px;
		}

		button {
			cursor: pointer;
		}

		#lightbox > button {
			opacity: 0;
			position: absolute;
			top: 50%;
			transform: translate(0%, -50%);
			padding-top: 20%;
			padding-bottom: 20%;
			border-style: none;
			background-color: rgba(0, 0, 0, 30);
			font-size: 50;
		}

		#lightbox > button:hover {
			transition: opacity 1s;
			opacity: .5;
		}

		#lightbox > button:not(:hover) {
			transition: opacity 1s;
			opacity: 0;
		}

		#next {
			right: 0px;
			padding-left: 20%;
			border-bottom-left-radius: 10px;
			border-top-left-radius: 10px;
		}

		#prev {
			left: 0px;
			padding-right: 20%;
			border-bottom-right-radius: 10px;
			border-top-right-radius: 10px;
		}

		#pagination {
			position: absolute;
			bottom: 10px;
			right: 10px;
			color: white;
		}

		#info {
			position: absolute;
			color: white;
			text-align: center;
			left: 50%;
			bottom: 20px;
			transform: translate(-50%, 0);
		}

